# hexo-strix

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  justfile  pyproject.toml  runs
.claude/: phase-state.json
configs/: curriculum.toml
configs/ablations/: baseline.toml  fewer-heads.toml  gine-draw-penalty.toml  gine.toml  prune-empty-edges.toml  shallow.toml  small-heads.toml  small.toml
configs/axis/: curriculum.toml  shallow.toml  small.toml  wide.toml
configs/gine-full/: baseline.toml
configs/gine-midi/: baseline.toml
configs/gine-mini/: 3l-128p32v-lean-d6.toml  4l-128p32v-jkcat-actor-relative.toml  4l-128p32v-jkcat-actor.toml  4l-128p32v-jkcat-rel2.toml  4l-128p32v-jkcat-scratch.toml  4l-128p32v-jkcat.toml  4l-128p32v-lean-d6-one-stage.toml  4l-128p32v-lean-d6-qhead.toml  4l-128p32v-lean-d6-vbins.toml  4l-128p32v-lean-d6-vhoriz.toml  4l-128p32v-lean-d6.toml  4l-128p32v-nojk-w12.toml  4l-128p32v.toml  4l-layerscale.toml  4l-scratch.toml  baseline.toml  jk-long-noise.toml  jk-long.toml  jk.toml
docker/: entrypoint.sh
docs/research/: 2026-07-06-binary-threat-features-design.md  2026-07-06-distributional-value-heads-design.md  2026-07-07-pczero-grouping-correctness.md  2026-07-12-hayes-live-budget-miss.md  2026-07-14-solver-zobrist-collision-and-wl4-guard.md
hexo-a0/: LICENSE  README.md  pyproject.toml  rocm-env.sh
hexo-a0/scripts/: bench_cpu_inference.py  bench_dedup_torch.py  setup-rocm.sh
hexo-a0/src/hexo_a0/: __init__.py  axis_conv.py  cli.py  config.py  config_io.py  curriculum.py  display.py  evaluate.py  export.py  gen_parity_fixtures.py  gpu_memory.py  graph.py  head_to_head.py  inference_server.py  krakenbot_eval.py  loss.py  mcts.py  model.py  replay_buffer.py  scriptable_model.py  sealbot_eval.py  self_play.py  sprt_daemon.py  sprt_eval.py  sprt_parallel.py  sprt_watcher.py  tb_writer.py  test_cli.py  trainer.py  viewer.py
hexo-a0/src/hexo_a0/serving/: __init__.py  analysis.py  app.py  dbmigrate.py  game.py  hds.py  htttx.py  inference.py  model.py  nativeutil.py  recorder.py  serialize.py
hexo-a0/src/hexo_a0/serving/static/: analysis.js  observatory.css  play.js  shared.js
hexo-a0/src/hexo_a0/serving/templates/: admin.html  index.html
hexo-a0/tests/: conftest.py  test_alloc_memory.py  test_analyze_position_native.py  test_analyze_trajectory_native.py  test_audit_joint_q_regret.py  test_audit_selfplay_blocking.py  test_augment_parity.py  test_axis_conv.py  test_axis_eval_fn_parity.py  test_axis_graph.py  test_axis_graph_lean.py  test_batched_reanalyze.py  test_binned_value.py  test_binned_value_export.py  test_binned_value_head.py  test_config.py  test_config_io.py  test_curriculum.py  test_dbmigrate.py  test_dedup_gineconv.py  test_display.py  test_end_to_end_invariance.py  test_evaluate.py  test_export.py  test_forcing_gil.py  test_gen_parity_fixtures.py  test_graph.py  test_graph_reconstruction.py  test_head_to_head.py  test_horizon_heads.py  test_horizon_targets.py  test_hx07.py  test_hx08_format.py  test_inference_protocol.py  test_inference_server.py  test_inference_server_relational.py  test_integration.py  test_jk_hexonet.py  test_jk_roundtrip.py  test_jk_scriptable.py  (+44 more)
hexo-a0/tests/fixtures/: hayes_20260712.htttx  hds_sandbox_5knldz6.json
hexo-rs/: .gitignore  Cargo.toml  README.md  pyproject.toml
hexo-rs/.cargo/: config.toml
hexo-rs/hexo-engine/: Cargo.toml
hexo-rs/hexo-engine/benches/: engine.rs
hexo-rs/hexo-engine/src/: board.rs  game.rs  hex.rs  legal_moves.rs  lib.rs  symmetry.rs  threat.rs  turn.rs  types.rs  win.rs
hexo-rs/hexo-infer/: Cargo.toml
hexo-rs/hexo-infer/src/: evaluator.rs  forward.rs  lib.rs  ops.rs  protocol.rs  server.rs  weights.rs
hexo-rs/hexo-infer/tests/: mcts_integration.rs  parity.rs  protocol_roundtrip.rs  timing.rs
hexo-rs/hexo-infer/tests/fixtures/: tiny.safetensors  tiny_early_5.json  tiny_initial.json  tiny_mid_20.json  tiny_midturn_9.json  tiny_nojk.safetensors  tiny_nojk_early_5.json  tiny_nojk_initial.json  tiny_nojk_mid_20.json  tiny_nojk_midturn_9.json
hexo-rs/hexo-mcts/: Cargo.toml
hexo-rs/hexo-mcts/benches/: bench_dag_backprop.rs
hexo-rs/hexo-mcts/src/: axis_graph.rs  batch_tensors.rs  graph.rs  graph_tensors.rs  inference.rs  inference_subprocess.rs  lib.rs  python.rs
hexo-rs/hexo-mcts/src/mcts/: acting.rs  backup.rs  batched.rs  batcher.rs  dedup_count.rs  forcing.rs  gumbel_mcts.rs  halving.rs  mod.rs  node.rs  scoring.rs  select.rs  simulate.rs
hexo-rs/hexo-mcts/src/prover/: dfpn.rs  fixtures.rs  hybrid.rs  kernel.rs  mod.rs  pn.rs
hexo-rs/hexo-py/: Cargo.toml
hexo-rs/hexo-py/src/: lib.rs
hexo-rs/hexo-solver/: Cargo.toml  README.md
hexo-rs/hexo-solver/src/: forcing.rs  lib.rs  position.rs  vct_probe.rs
hexo-rs/hexo-solver/src/prover/: dfpn.rs  fixtures.rs  hybrid.rs  io.rs  kernel.rs  mod.rs  pdspn.rs  pn.rs  portfolio.rs
hexo-rs/hexo-wasm/: Cargo.toml  README.md
hexo-rs/hexo-wasm/demo/: index.html  worker.js
hexo-rs/hexo-wasm/src/: lib.rs  position.rs  solver.rs
hexo-rs/hexo-wasm/tests/: node_smoke.mjs  solver_smoke.mjs
hexo-rs/tests/: integration.rs  test_python.py
scripts/: bench_self_play.py  eval_human_corpus.py  explore_own_dead.py  forcing_depth_sweep.py  forcing_search_prototype.py  hds_to_json.py  policy_viewer.py  prove.py  test_forcing_search_prototype.py  trim_sprt.py
scripts/fixtures/forcing_puzzles/: 0hz3hty.json  0l4291i_live.json  7zoidcw_line.json  8is963b.json  94gnnol.json  acly7kb.json  d9ci11d_line.json  dy3dg99.json  g2xx6wl.json  hayes_20260712_line.json  hu01jk4.json  jh7yo7y.json  jnzzmcm.json  l9mxn59.json  lz60mfb.json  mvp2lvc.json  strongloss_a_line.json  strongloss_b_line.json  xsnfyll.json  zrugh2x.json
