[project]
name = "hexo-a0"
version = "0.1.0"
description = "HeXO AlphaZero — GNN architecture for infinite hex tic-tac-toe"
readme = "README.md"
authors = [
    { name = "Dan Eagle", email = "dan@tyto.cc" }
]
requires-python = ">=3.13"
dependencies = [
    "hexo-rs",
    "torch>=2.11",
    "torch-geometric>=2.7",
    "tensorboard",
    "safetensors>=0.4",
]

[project.optional-dependencies]
viewer = ["pygame"]

[project.scripts]
hexo-a0 = "hexo_a0.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"


[dependency-groups]
dev = ["pytest>=8.0"]
