[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hexo-rs"
requires-python = ">=3.13"
dynamic = ["version"]

[tool.maturin]
manifest-path = "hexo-py/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "hexo_rs"

[tool.uv]
cache-keys = [{file = "hexo-py/Cargo.toml"}, {file = "hexo-mcts/Cargo.toml"}, {file = "hexo-engine/Cargo.toml"}, {file = "hexo-infer/Cargo.toml"}, {file = "hexo-py/src/**/*.rs"}, {file = "hexo-mcts/src/**/*.rs"}, {file = "hexo-engine/src/**/*.rs"}, {file = "hexo-infer/src/**/*.rs"}]

[dependency-groups]
dev = ["pytest>=8.0"]
