[package]
name = "hexo-wasm"
version = "0.1.0"
edition = "2024"
authors = ["SootyOwl"]
description = "wasm-bindgen WebWorker API for the strixbot HeXO player (hexo-infer + gumbel MCTS)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hexo-engine = { version = "0.1.0", path = "../hexo-engine" }
hexo-mcts = { version = "0.1.0", path = "../hexo-mcts" }
hexo-infer = { version = "0.1.0", path = "../hexo-infer" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
rand_chacha = "0.9"